* fixed rpm builds, patch by Dan Lipsitt
* always installs pkg-config .pc script
* remove obsolete confuse-config script in favour of pkg-config
* fixed a bug reported by Josh Kropf with single sections with titles
* added patch that escapes values with quotes and backslashes when printing.
* fixed a memory leak in default values for string lists,
  reported by Vineeth Neelakant.

New in 2.5
----------

* added flag CFGF_NODEFAULT (option has no default value)
* fixed cfg_set_validate_func() for sections, using the "|" syntax
* added a tutorial
* updated autoconf stuff, libconfuse installs with appropriate suffix now
* added data file for pkg-config (try 'pkg-config --libs libconfuse')
* updated confuse-config script (now only installed if pkg-config not found)
* added cfg_name() and cfg_opt_name() functions


New in 2.4
----------

* added option type CFGT_PTR as a user-defined type
* fixed building of shared libraries


New in 2.3
----------

* fixes compilation errors with gcc < 3.3
* options passed to cfg_init() are now dynamically duplicated, so it is no
  longer necessary to declare the cfg_opt_t array static
* added tests using 'check' (a unit testing framework for C)
* added config script 'confuse-config'


New in 2.2
----------

* Allows more characters in an unquoted string (thanks Mike)
* added cfg_opt_get functions
* added cfg_opt_size function
* added support to print options to a file
* added print callback function per option
* simple options can be retrieved with the cfg_get functions (allows
  using the cfg_print function for simple values)
* added validating callback function per option


New in 2.1
----------

* Reversed logic in cfg_getXXX functions, they now abort if given an
  undeclared option name, and NULL/false if no value is set. Suggested
  by Ademar de Souza Reis Jr.
* Sections without CFGF_MULTI flag now have default values
* The cfg_getXXX functions now accept an extended syntax for the